--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
       const apiKey = document.getElementById("apiKey").value;
       const prompt = document.getElementById("prompt").value;
 
-      const res = await fetch("https://gemini-proxy.onrender.com/api/generate-video", {
+      const res = await fetch("https://aic999.onrender.com/api/generate-video", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ apiKey, prompt })
